[tool.poetry]
name = "research"
version = "0.1.0"
description = "research using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }


[tool.poetry.scripts]
research = "research.main:run"
run_crew = "research.main:run"
train = "research.main:train"
replay = "research.main:replay"
test = "research.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
