[project]
name = "research"
version = "0.1.0"
description = "research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0"
]

[project.scripts]
research = "research.main:run"
run_crew = "research.main:run"
train = "research.main:train"
replay = "research.main:replay"
test = "research.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
